# ocr_service

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md
.config/: insta.yaml
.github/workflows/: pull-request-validation.yml
compose/: compose.yaml
open-observe/: README.md  compose.yaml
scripts/: README.md  download-tessdata.sh
src/: lib.rs  main.rs
src/config/: app_config.rs  error.rs  mod.rs
src/middleware/: mod.rs  security.rs  server.rs
src/models/: error.rs  health.rs  images.rs  languages.rs  mod.rs
src/routes/: health.rs  images.rs  languages.rs  mod.rs
src/utils/: languages.rs  mod.rs  telemetry.rs  validations.rs
tests/api/: health.rs  helpers.rs  images.rs  languages.rs  main.rs
tests/api/snapshots/: api__images__images_endpoint_tessdoc_introduction.snap  api__languages__languages_ok.snap
